Added request spec for foods/plans
